--- a/frontend/src/pages/PetOwnerDashboard.css
+++ b/frontend/src/pages/PetOwnerDashboard.css
@@ -14,8 +14,8 @@
 
 .main-content {
   flex: 1;
-  margin-left: 280px;
   background-color: #FFFFFF;
+  margin-left: 0;
 }
 
 .content-wrapper {
